Publish of Github pages from Gradle.

--- a/bytecode/reports/BytecodeReport-CodeNarc-0.27.0.html
+++ b/bytecode/reports/BytecodeReport-CodeNarc-0.27.0.html
@@ -15,34 +15,13 @@
         <span class='divider' />
       </li>
       <li>
-        <a>APP</a>
+        <a>CODENARC-0.27.0</a>
       </li>
     </ul>
-    <h2 class='text-center'>Bytecode Analysis for com.strater.jenn.App: App</h2>
+    <h2 class='text-center'>Bytecode Analysis for Jar: CodeNarc-0.27.0</h2>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
-      <h2>Lines Removed: 484</h2>
-    </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
-      <h2>Benchmarks</h2>
-      <div class='col-sm-6 text-center'>
-        <table class='table'>
-          <tr>
-            <th></th>
-            <th>Before Optimization</th>
-            <th>After Optimization</th>
-          </tr>
-          <tr>
-            <td>Benchmark Average</td>
-            <td>6265</td>
-            <td>6278</td>
-          </tr>
-          <tr>
-            <td>Benchmark Std Dev</td>
-            <td>59.04</td>
-            <td>66.3</td>
-          </tr>
-        </table>
-      </div>
+      <h2>Jar File Size Reduction (in bytes): 6241</h2>
+      <h2>Bytecode Instructions Removed: 9526</h2>
     </div>
   </body>
 </html>
