--- a/bytecode/reports/BytecodeReport-eachloop.html
+++ b/bytecode/reports/BytecodeReport-eachloop.html
@@ -43,6 +43,18 @@ numbers.each {
           <td>6</td>
           <td>6</td>
         </tr>
+        <tr>
+          <td>Total Lines - Before</td>
+          <td>272</td>
+          <td>166</td>
+          <td>182</td>
+        </tr>
+        <tr>
+          <td>Percentage of Lines Removed</td>
+          <td>2.2</td>
+          <td>3.6</td>
+          <td>3.3</td>
+        </tr>
       </table>
     </div>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
@@ -58,27 +70,27 @@ numbers.each {
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>444</td>
-            <td>470</td>
-            <td>341</td>
+            <td>431</td>
+            <td>477</td>
+            <td>392</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>438</td>
-            <td>467</td>
-            <td>337</td>
+            <td>461</td>
+            <td>460</td>
+            <td>399</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>7.59</td>
-            <td>8.19</td>
-            <td>4.9</td>
+            <td>11.04</td>
+            <td>18.88</td>
+            <td>25.29</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>7.28</td>
-            <td>9.75</td>
-            <td>6.47</td>
+            <td>25.87</td>
+            <td>13.42</td>
+            <td>28.02</td>
           </tr>
         </table>
       </div>
@@ -93,27 +105,27 @@ numbers.each {
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>440</td>
-            <td>473</td>
-            <td>342</td>
+            <td>448</td>
+            <td>474</td>
+            <td>388</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>436</td>
-            <td>468</td>
-            <td>342</td>
+            <td>460</td>
+            <td>470</td>
+            <td>416</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>7.92</td>
-            <td>7.04</td>
-            <td>3.94</td>
+            <td>9.7</td>
+            <td>14.76</td>
+            <td>20.96</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>8.12</td>
-            <td>8.39</td>
-            <td>7.11</td>
+            <td>18.66</td>
+            <td>17.07</td>
+            <td>25.97</td>
           </tr>
         </table>
       </div>
@@ -128,27 +140,27 @@ numbers.each {
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>448</td>
-            <td>467</td>
-            <td>343</td>
+            <td>462</td>
+            <td>496</td>
+            <td>370</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>440</td>
-            <td>467</td>
-            <td>340</td>
+            <td>452</td>
+            <td>573</td>
+            <td>352</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>11.9</td>
-            <td>10.61</td>
-            <td>5.77</td>
+            <td>15.75</td>
+            <td>33.28</td>
+            <td>21.07</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>8.53</td>
-            <td>12.09</td>
-            <td>9.72</td>
+            <td>14.83</td>
+            <td>47.28</td>
+            <td>19.79</td>
           </tr>
         </table>
       </div>
@@ -163,27 +175,27 @@ numbers.each {
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>445</td>
-            <td>473</td>
-            <td>345</td>
+            <td>474</td>
+            <td>509</td>
+            <td>362</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>439</td>
-            <td>470</td>
-            <td>340</td>
+            <td>437</td>
+            <td>563</td>
+            <td>355</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>8.33</td>
-            <td>8.69</td>
-            <td>7.71</td>
+            <td>18.97</td>
+            <td>19.97</td>
+            <td>18.04</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>9.81</td>
-            <td>12.87</td>
-            <td>8.21</td>
+            <td>16.83</td>
+            <td>44.08</td>
+            <td>18.7</td>
           </tr>
         </table>
       </div>
@@ -198,27 +210,27 @@ numbers.each {
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>442</td>
-            <td>471</td>
-            <td>343</td>
+            <td>472</td>
+            <td>478</td>
+            <td>377</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>440</td>
-            <td>461</td>
-            <td>334</td>
+            <td>437</td>
+            <td>517</td>
+            <td>343</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>8.52</td>
-            <td>9.41</td>
-            <td>6.93</td>
+            <td>34.89</td>
+            <td>23.71</td>
+            <td>33.19</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>8.18</td>
-            <td>6.82</td>
-            <td>6.33</td>
+            <td>24.05</td>
+            <td>29.79</td>
+            <td>13.34</td>
           </tr>
         </table>
       </div>
