--- a/bytecode/reports/BytecodeReport-forloop.html
+++ b/bytecode/reports/BytecodeReport-forloop.html
@@ -44,6 +44,18 @@ results
           <td>4</td>
           <td>4</td>
         </tr>
+        <tr>
+          <td>Total Lines - Before</td>
+          <td>178</td>
+          <td>110</td>
+          <td>107</td>
+        </tr>
+        <tr>
+          <td>Percentage of Lines Removed</td>
+          <td>2.2</td>
+          <td>3.6</td>
+          <td>3.7</td>
+        </tr>
       </table>
     </div>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
@@ -59,27 +71,27 @@ results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>425</td>
-            <td>462</td>
-            <td>347</td>
+            <td>415</td>
+            <td>529</td>
+            <td>340</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>422</td>
-            <td>444</td>
-            <td>358</td>
+            <td>498</td>
+            <td>461</td>
+            <td>334</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>9.35</td>
-            <td>19.79</td>
-            <td>9.37</td>
+            <td>9.74</td>
+            <td>62.87</td>
+            <td>11.0</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>7.12</td>
-            <td>7.64</td>
-            <td>16.02</td>
+            <td>45.38</td>
+            <td>12.46</td>
+            <td>5.1</td>
           </tr>
         </table>
       </div>
@@ -94,27 +106,27 @@ results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>423</td>
-            <td>461</td>
-            <td>355</td>
+            <td>410</td>
+            <td>455</td>
+            <td>343</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>436</td>
-            <td>439</td>
-            <td>340</td>
+            <td>445</td>
+            <td>459</td>
+            <td>333</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>8.71</td>
-            <td>22.42</td>
-            <td>12.45</td>
+            <td>8.96</td>
+            <td>21.4</td>
+            <td>9.85</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>10.97</td>
-            <td>7.82</td>
-            <td>9.75</td>
+            <td>26.48</td>
+            <td>11.93</td>
+            <td>6.67</td>
           </tr>
         </table>
       </div>
@@ -129,27 +141,27 @@ results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>429</td>
-            <td>451</td>
-            <td>348</td>
+            <td>431</td>
+            <td>458</td>
+            <td>381</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>595</td>
-            <td>560</td>
-            <td>404</td>
+            <td>434</td>
+            <td>466</td>
+            <td>329</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>14.28</td>
-            <td>13.11</td>
-            <td>9.56</td>
+            <td>13.19</td>
+            <td>22.63</td>
+            <td>21.52</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>53.49</td>
-            <td>183.71</td>
-            <td>52.49</td>
+            <td>15.23</td>
+            <td>38.51</td>
+            <td>4.85</td>
           </tr>
         </table>
       </div>
@@ -164,27 +176,27 @@ results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>476</td>
-            <td>453</td>
-            <td>342</td>
+            <td>440</td>
+            <td>457</td>
+            <td>397</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>596</td>
-            <td>496</td>
-            <td>376</td>
+            <td>437</td>
+            <td>450</td>
+            <td>336</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>30.42</td>
-            <td>14.89</td>
-            <td>4.39</td>
+            <td>7.25</td>
+            <td>18.53</td>
+            <td>21.81</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>36.89</td>
-            <td>27.29</td>
-            <td>39.96</td>
+            <td>14.5</td>
+            <td>10.15</td>
+            <td>8.98</td>
           </tr>
         </table>
       </div>
@@ -199,27 +211,27 @@ results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>421</td>
-            <td>459</td>
-            <td>346</td>
+            <td>449</td>
+            <td>454</td>
+            <td>384</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>423</td>
-            <td>463</td>
-            <td>350</td>
+            <td>432</td>
+            <td>450</td>
+            <td>344</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>9.98</td>
-            <td>20.35</td>
-            <td>6.84</td>
+            <td>19.79</td>
+            <td>23.02</td>
+            <td>19.08</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>24.8</td>
-            <td>25.53</td>
-            <td>10.89</td>
+            <td>13.55</td>
+            <td>10.26</td>
+            <td>16.71</td>
           </tr>
         </table>
       </div>
