--- a/bytecode/reports/BytecodeReport-nsieve.html
+++ b/bytecode/reports/BytecodeReport-nsieve.html
@@ -89,8 +89,20 @@ def flags = new boolean[m+1]
         </tr>
         <tr>
           <td>Lines Removed</td>
-          <td>46</td>
-          <td>46</td>
+          <td>54</td>
+          <td>54</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>Total Lines - Before</td>
+          <td>792</td>
+          <td>476</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>Percentage of Lines Removed</td>
+          <td>6.8</td>
+          <td>11.3</td>
           <td>Error</td>
         </tr>
       </table>
@@ -108,26 +120,26 @@ def flags = new boolean[m+1]
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>646</td>
+            <td>518</td>
             <td>652</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>511</td>
-            <td>665</td>
+            <td>575</td>
+            <td>661</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>101.62</td>
-            <td>20.03</td>
+            <td>19.28</td>
+            <td>34.24</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>13.65</td>
-            <td>39.64</td>
+            <td>88.27</td>
+            <td>42.25</td>
             <td>N/A</td>
           </tr>
         </table>
@@ -143,26 +155,26 @@ def flags = new boolean[m+1]
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>649</td>
-            <td>643</td>
+            <td>512</td>
+            <td>735</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>508</td>
-            <td>672</td>
+            <td>537</td>
+            <td>655</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>93.18</td>
-            <td>19.07</td>
+            <td>18.78</td>
+            <td>71.53</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>12.23</td>
-            <td>30.31</td>
+            <td>28.55</td>
+            <td>37.27</td>
             <td>N/A</td>
           </tr>
         </table>
@@ -178,26 +190,26 @@ def flags = new boolean[m+1]
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>574</td>
-            <td>875</td>
+            <td>531</td>
+            <td>739</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>537</td>
-            <td>718</td>
+            <td>555</td>
+            <td>697</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>56.01</td>
-            <td>136.23</td>
+            <td>12.75</td>
+            <td>63.09</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>13.97</td>
-            <td>57.25</td>
+            <td>32.7</td>
+            <td>29.76</td>
             <td>N/A</td>
           </tr>
         </table>
@@ -213,26 +225,26 @@ def flags = new boolean[m+1]
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>551</td>
-            <td>997</td>
+            <td>545</td>
+            <td>830</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>546</td>
-            <td>791</td>
+            <td>607</td>
+            <td>792</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>15.77</td>
-            <td>113.08</td>
+            <td>17.06</td>
+            <td>50.82</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>13.05</td>
-            <td>27.86</td>
+            <td>55.65</td>
+            <td>37.35</td>
             <td>N/A</td>
           </tr>
         </table>
@@ -248,26 +260,26 @@ def flags = new boolean[m+1]
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>672</td>
-            <td>964</td>
+            <td>652</td>
+            <td>986</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>654</td>
-            <td>917</td>
+            <td>673</td>
+            <td>909</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>32.93</td>
-            <td>39.41</td>
+            <td>21.7</td>
+            <td>69.91</td>
             <td>N/A</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>28.81</td>
-            <td>38.43</td>
+            <td>36.08</td>
+            <td>44.65</td>
             <td>N/A</td>
           </tr>
         </table>
