--- a/bytecode/reports/BytecodeReport-collectloop.html
+++ b/bytecode/reports/BytecodeReport-collectloop.html
@@ -43,6 +43,18 @@ println results
           <td>4</td>
           <td>4</td>
         </tr>
+        <tr>
+          <td>Total Lines - Before</td>
+          <td>245</td>
+          <td>140</td>
+          <td>153</td>
+        </tr>
+        <tr>
+          <td>Percentage of Lines Removed</td>
+          <td>1.6</td>
+          <td>2.9</td>
+          <td>2.6</td>
+        </tr>
       </table>
     </div>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
@@ -58,27 +70,27 @@ println results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>444</td>
-            <td>475</td>
+            <td>476</td>
+            <td>477</td>
             <td>343</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>442</td>
-            <td>475</td>
-            <td>347</td>
+            <td>441</td>
+            <td>481</td>
+            <td>346</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>7.15</td>
-            <td>9.26</td>
-            <td>4.5</td>
+            <td>36.07</td>
+            <td>23.2</td>
+            <td>14.73</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>10.76</td>
-            <td>7.87</td>
-            <td>6.99</td>
+            <td>19.87</td>
+            <td>20.49</td>
+            <td>21.96</td>
           </tr>
         </table>
       </div>
@@ -93,27 +105,27 @@ println results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>442</td>
-            <td>473</td>
+            <td>436</td>
+            <td>488</td>
             <td>343</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>445</td>
-            <td>473</td>
-            <td>346</td>
+            <td>435</td>
+            <td>476</td>
+            <td>344</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>8.25</td>
-            <td>10.01</td>
-            <td>7.16</td>
+            <td>12.98</td>
+            <td>19.68</td>
+            <td>10.4</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>11.12</td>
-            <td>7.91</td>
-            <td>5.91</td>
+            <td>17.83</td>
+            <td>17.35</td>
+            <td>13.56</td>
           </tr>
         </table>
       </div>
@@ -128,27 +140,27 @@ println results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>442</td>
-            <td>473</td>
-            <td>345</td>
+            <td>431</td>
+            <td>477</td>
+            <td>356</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>438</td>
-            <td>474</td>
-            <td>345</td>
+            <td>436</td>
+            <td>509</td>
+            <td>341</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>11.14</td>
-            <td>9.11</td>
-            <td>7.02</td>
+            <td>10.16</td>
+            <td>19.8</td>
+            <td>12.33</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>5.91</td>
-            <td>7.78</td>
-            <td>5.31</td>
+            <td>18.55</td>
+            <td>43.81</td>
+            <td>9.11</td>
           </tr>
         </table>
       </div>
@@ -163,27 +175,27 @@ println results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>442</td>
-            <td>475</td>
-            <td>343</td>
+            <td>434</td>
+            <td>476</td>
+            <td>339</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>443</td>
-            <td>476</td>
-            <td>349</td>
+            <td>439</td>
+            <td>503</td>
+            <td>340</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>7.53</td>
-            <td>9.06</td>
-            <td>5.48</td>
+            <td>12.16</td>
+            <td>18.47</td>
+            <td>11.36</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>8.5</td>
-            <td>9.91</td>
-            <td>8.72</td>
+            <td>18.9</td>
+            <td>36.31</td>
+            <td>7.05</td>
           </tr>
         </table>
       </div>
@@ -198,27 +210,27 @@ println results
           </tr>
           <tr>
             <td>Benchmark Average - Before</td>
-            <td>440</td>
-            <td>473</td>
-            <td>347</td>
+            <td>443</td>
+            <td>486</td>
+            <td>338</td>
           </tr>
           <tr>
             <td>Benchmark Average - After</td>
-            <td>445</td>
-            <td>473</td>
-            <td>346</td>
+            <td>464</td>
+            <td>510</td>
+            <td>336</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - Before</td>
-            <td>11.21</td>
-            <td>7.59</td>
-            <td>8.8</td>
+            <td>15.44</td>
+            <td>25.94</td>
+            <td>7.95</td>
           </tr>
           <tr>
             <td>Benchmark Std Dev - After</td>
-            <td>9.38</td>
-            <td>8.2</td>
-            <td>6.69</td>
+            <td>13.3</td>
+            <td>24.74</td>
+            <td>7.21</td>
           </tr>
         </table>
       </div>
