Publish of Github pages from Gradle.

--- a/bytecode/index.html
+++ b/bytecode/index.html
@@ -40,6 +40,11 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-groovy-all-2.4.9.html'>groovy-all-2.4.9</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-helloworld.html'>helloworld</a>
             </td>
           </tr>
