--- a/bytecode/reports/BytecodeReport-groovy-all-2.4.9.html
+++ b/bytecode/reports/BytecodeReport-groovy-all-2.4.9.html
@@ -15,13 +15,13 @@
         <span class='divider' />
       </li>
       <li>
-        <a>CODENARC-0.27.0</a>
+        <a>GROOVY-ALL-2.4.9</a>
       </li>
     </ul>
-    <h2 class='text-center'>Bytecode Analysis for Jar: CodeNarc-0.27.0</h2>
+    <h2 class='text-center'>Bytecode Analysis for Jar: groovy-all-2.4.9</h2>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
-      <h2>Jar File Size Reduction (in bytes): 6241</h2>
-      <h2>Bytecode Instructions Removed: 9526</h2>
+      <h2>Jar File Size Reduction (in bytes): 61993</h2>
+      <h2>Bytecode Instructions Removed: 9874</h2>
     </div>
   </body>
 </html>
