Publish of Github pages from Gradle.

--- a/bytecode/index.html
+++ b/bytecode/index.html
@@ -15,7 +15,22 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-ackermann.html'>ackermann</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-App.html'>App</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-ary.html'>ary</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-binarytrees.html'>binarytrees</a>
             </td>
           </tr>
           <tr>
@@ -35,6 +50,16 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-fannkuch.html'>fannkuch</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-fibo.html'>fibo</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-forloop.html'>forloop</a>
             </td>
           </tr>
@@ -50,7 +75,62 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-mandelbrot.html'>mandelbrot</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-nsieve.html'>nsieve</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-PersonScript.html'>PersonScript</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-ratpack-groovy-1.4.6.html'>ratpack-groovy-1.4.6</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-recursive.html'>recursive</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-regexdna.html'>regexdna</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-spectralnorm.html'>spectralnorm</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-TestExample.html'>TestExample</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-TestExampleIfElse.html'>TestExampleIfElse</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-TestExampleMultiAssignment.html'>TestExampleMultiAssignment</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-threadring.html'>threadring</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-wordfreq.html'>wordfreq</a>
             </td>
           </tr>
         </table>
