--- a/bytecode/reports/BytecodeReport-ratpack-groovy-1.4.6.html
+++ b/bytecode/reports/BytecodeReport-ratpack-groovy-1.4.6.html
@@ -15,36 +15,13 @@
         <span class='divider' />
       </li>
       <li>
-        <a>APP</a>
+        <a>RATPACK-GROOVY-1.4.6</a>
       </li>
     </ul>
-    <h2 class='text-center'>Bytecode Analysis for com.strater.jenn.App: App</h2>
+    <h2 class='text-center'>Bytecode Analysis for Jar: ratpack-groovy-1.4.6</h2>
     <div class='row col-sm-10 text-center col-sm-offset-1'>
-      <h2>Lines Removed: 652</h2>
-      <h2>Total Lines: 30121</h2>
-      <h2>Percentage Lines Removed: 2.2</h2>
-    </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
-      <h2>Benchmarks</h2>
-      <div class='col-sm-6 text-center'>
-        <table class='table'>
-          <tr>
-            <th></th>
-            <th>Before Optimization</th>
-            <th>After Optimization</th>
-          </tr>
-          <tr>
-            <td>Benchmark Average</td>
-            <td>6187</td>
-            <td>6167</td>
-          </tr>
-          <tr>
-            <td>Benchmark Std Dev</td>
-            <td>82.47</td>
-            <td>93.07</td>
-          </tr>
-        </table>
-      </div>
+      <h2>Jar File Size Reduction (in bytes): 1333</h2>
+      <h2>Bytecode Instructions Removed: 0</h2>
     </div>
   </body>
 </html>
